adjust background color prep homepage

--- a/app/assets/stylesheets/dovetail-app/bootstrap-variables.scss
+++ b/app/assets/stylesheets/dovetail-app/bootstrap-variables.scss
@@ -16,6 +16,7 @@ $gray-700: #535355;
 $gray-800: #323233;
 $gray-900: #1a1a1a;
 
+$blue-100: #F7F9FD;
 $blue: #0072a3;
 $blue-dark: #003a57;
 $blue-light: #8cd2f4;
