--- a/app/views/layouts/_subnav.html.erb
+++ b/app/views/layouts/_subnav.html.erb
@@ -18,7 +18,7 @@
 </div>
 
 
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasHistory" aria-labelledby="offcanvasHistoryLabel">
+<div class="offcanvas offcanvas-end bg-body" tabindex="-1" id="offcanvasHistory" aria-labelledby="offcanvasHistoryLabel">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title d-flex align-items-center mb-0" id="offcanvasHistoryLabel"><span class="material-icons me-2" aria-label="hidden">history</span> Query History</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
