--- a/app/assets/stylesheets/dovetail-app/bootstrap-variables.scss
+++ b/app/assets/stylesheets/dovetail-app/bootstrap-variables.scss
@@ -19,6 +19,7 @@ $gray-900: #1a1a1a;
 $blue: #0072a3;
 $blue-dark: #003a57;
 $blue-light: #8cd2f4;
+$blue-100: #F7F9FD;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #d63384;
