--- a/app/assets/stylesheets/slim-select.css
+++ b/app/assets/stylesheets/slim-select.css
@@ -6,12 +6,6 @@
   }
 }
 
-.form-floating:has(input[type="text"]:focus) {
-  label {
-    transform: scale(0.85) translateY(-1.75rem) translateX(0.15rem);
-  }
-}
-
 .ss-content.form-select {
   border-radius: var(--ss-border-radius);
 
@@ -31,7 +25,7 @@
 
       &:focus {
         box-shadow: none;
-        border: 2px solid var(--bs-blue);
+        outline: 2px solid var(--bs-blue);
       }
     }
   }
@@ -43,7 +37,8 @@
       line-height: 2.2;
       border-bottom: 1px solid var(--bs-gray-200);
 
-      &:hover {
+      &:hover,
+      &.ss-highlighted {
         background: var(--bs-gray-200);
         color: var(--ss-font-color);
       }
@@ -69,31 +64,46 @@
   }
 }
 
-.form-select:focus {
-  box-shadow: none;
-  border: 2px solid var(--bs-blue);
-}
+.ss-main {
+  .ss-values {
+    .ss-value {
+      background-color: var(--bs-gray-200);
+      padding: 3px 0;
 
-.ss-main .ss-values .ss-value {
-  background-color: var(--bs-gray-200);
-  padding: 3px 0;
+      .ss-value-text {
+        padding: 0 5px;
+        color: var(--ss-font-color);
+      }
 
-  .ss-value-text {
-    padding: 0 5px;
-    color: var(--ss-font-color);
+      .ss-value-delete,
+      .ss-value-delete svg {
+        width: 9px;
+        height: 9px;
+
+        path {
+          stroke: var(--bs-gray-400);
+        }
+
+        &:hover path {
+          stroke: var(--ss-font-color);
+        }
+      }
+    }
   }
 
-  .ss-value-delete,
-  .ss-value-delete svg {
-    width: 9px;
-    height: 9px;
-
-    path {
-      stroke: var(--bs-gray-400);
+  .ss-deselect {
+    svg {
+      path {
+        stroke: var(--bs-gray-400);
+      }
     }
 
-    &:hover path {
-      stroke: var(--ss-font-color);
+    &:hover {
+      svg {
+        path {
+          stroke: var(--bs-danger);
+        }
+      }
     }
   }
 }
