--- a/app/views/data_explorer/_filters_panel.html.erb
+++ b/app/views/data_explorer/_filters_panel.html.erb
@@ -1,6 +1,4 @@
 <fieldset class="filters-panel">
-  <legend>Filters</legend>
-
   <%
     # Sort active filters to the top
     sorted_dims = DataSchema.dimensions.sort do |a, b|
@@ -14,29 +12,34 @@
   <script>
     (function () {
       document.addEventListener("DOMContentLoaded", (event) => {
-        document.querySelector("#temp_add_filter").addEventListener("change", (ev) => {
+        document.querySelector("#add-filter").addEventListener("change", (ev) => {
           const dimName = ev.target.value;
 
           if (dimName !== "default") {
             const chooserForDimension = document.querySelector(`.filter-chooser[data-dimension-name="${dimName}"]`)
             chooserForDimension.classList.add("filter-added");
 
-            document.querySelector("#temp_add_filter").value = "default";
+            document.querySelector("#add-filter").value = "default";
           }
         });
       });
     })();
   </script>
 
-  <select id="temp_add_filter" style="margin-bottom: 20px; float: right;">
-    <option value="default">+ Add Filter</option>
-    <% sorted_dims.each do |dimension_name, dimension_def| %>
-      <% unless @composition.filters&.find { |f| f.dimension == dimension_name.to_sym } %>
-        <option value="<%= dimension_name %>"><%= schema_field_label(dimension_name) %></option>
-      <% end %>
-    <% end %>
-  </select>
-  <div style="clear: both;"></div>
+  <div class="d-flex p-2">
+    <div class="flex-grow-1">Filters</div>
+
+    <div>
+      <select id="add-filter">
+        <option value="default">+ Add Filter</option>
+        <% sorted_dims.each do |dimension_name, dimension_def| %>
+          <% unless @composition.filters&.find { |f| f.dimension == dimension_name.to_sym } %>
+            <option value="<%= dimension_name %>"><%= schema_field_label(dimension_name) %></option>
+          <% end %>
+        <% end %>
+      </select>
+    </div>
+  </div>
 
   <% sorted_dims.each do |dimension_name, dimension_def| %>
     <%= render partial: "data_explorer/filter_chooser", locals: {dimension_name: dimension_name, dimension_def: dimension_def} %>
