--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -10,7 +10,7 @@
       <%= link_to("Podcasts", current_user_app("podcasts"), class: "nav-link") if current_user_app?("podcasts") %>
       <%= link_to("Metrics", current_user_app("metrics"), class: "nav-link") if current_user_app?("metrics") %>
       <%= link_to("Inventory", current_user_app("augury"), class: "nav-link") if current_user_app?("inventory") %>
-      <%= link_to("Insights", main_app.root_path, class: "nav-link active") %>
+      <%= link_to("Insights", root_path, class: "nav-link active") %>
     </nav>
 
     <nav class="navbar-nav dropdown">
@@ -42,9 +42,15 @@
         </a>
         <div class="dropdown-menu dropdown-menu-end dropdown-menu-dark position-absolute shadow pb-2 text-center m-0" aria-labelledby="nav-user-dropdown">
           <div class="h2 py-3 px-4 text-nowrap"><%= current_user_name %></div>
-          <%#= link_to t(".id"), current_user_id_profile, class: "btn btn-primary-light mb-2" %>
-          <%#= link_to "Reload", main_app.refresh_path, data: {turbo: false}, class: "dropdown-item text-primary-light" %>
-          <%#= link_to "Logout", main_app.logout_path, data: {turbo: false}, class: "dropdown-item text-primary-light" %>
+          <%= link_to t(".id"), current_user_id_profile, class: "btn btn-primary-light mb-2" %>
+          <% if current_user_admin? %>
+            <%= link_to "Insights Admin", admin_root_path, class: "dropdown-item text-primary-light" %>
+            <button type="button" class="dropdown-item text-primary-light" data-bs-toggle="modal" data-bs-target="#wildcard-modal">
+              Wildcard Access
+            </button>
+          <% end %>
+          <%= link_to t(".reload"), refresh_sessions_path, data: {turbo: false}, class: "dropdown-item text-primary-light" %>
+          <%= link_to t(".logout"), logout_sessions_path, data: {turbo: false}, class: "dropdown-item text-primary-light" %>
         </div>
       </nav>
     <% end %>
@@ -67,3 +73,30 @@
 
   </div>
 </div>
+
+<% if current_user_admin? %>
+  <% if current_user_wildcard? %>
+    <div class="alert alert-danger m-0 py-2 rounded-0" role="alert">
+      Woh, wildcard access!
+      <%= link_to "Go back to normal", refresh_sessions_path, data: {turbo: false} %>
+    </div>
+  <% end %>
+
+  <div class="modal fade" id="wildcard-modal" tabindex="-1" aria-labelledby="wildcard-modal-label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="wildcard-modal-label">Wildcard Access</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Get access to everything! Everywhere!
+          <br>
+          <%= link_to "Total Wildcard!", refresh_sessions_path(wildcard: true), data: {turbo: false} %>
+          <br>
+          <%= link_to "Just Readonly", refresh_sessions_path(wildcard: "readonly"), data: {turbo: false} %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
