Fix filter option hiding

--- a/app/views/data_explorer/_filter_chooser.html.erb
+++ b/app/views/data_explorer/_filter_chooser.html.erb
@@ -5,7 +5,7 @@
 
 <style>
   .filters-panel:has(div.filter-added[data-dimension-name="<%= dimension_name %>"]) {
-    #temp_add_filter option[value="<%= dimension_name %>"] {
+    #add-filter option[value="<%= dimension_name %>"] {
       display: none;
     }
   }
