Add missing totals class

--- a/app/views/data_explorer/time_series/results/table/_40_totals_row.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_40_totals_row.html.erb
@@ -44,7 +44,7 @@
           %>
 
           <% total = %>
-          <td><%= text %></td>
+          <td class="totals"><%= text %></td>
         <% end %>
       <% end %>
 
