--- a/app/assets/stylesheets/slim-select.css
+++ b/app/assets/stylesheets/slim-select.css
@@ -1,4 +1,4 @@
-.form-floating:has(.ss-main.form-select):not(
+.form-floating:has(.ss-main.form-select):not(:has(.ss-single)):not(
     :has(.ss-main.form-select .ss-values .ss-value)
   ) {
   label {
