--- a/app/views/data_explorer/_highlight_chooser.html.erb
+++ b/app/views/data_explorer/_highlight_chooser.html.erb
@@ -1,63 +1,82 @@
 <fieldset data-data-explorer--results-table-highlight-target="chooser">
-  <legend>Highlight Options</legend>
+  <div class="form-floating input-group mb-3">
+    <select
+      id="hi-scale"
+      class="form-select"
+      data-data-explorer--results-table-highlight-target="scale"
+      data-action="data-explorer--results-table-highlight#highlight"
+      data-controller="slim-select"
+      data-ss-opt-allow-deselect="false"
+      data-ss-opt-placeholder-text="">
 
-  <label for="hi-scale">Scale</label>
-  <select
-    id="hi-scale"
-    data-data-explorer--results-table-highlight-target="scale"
-    data-action="data-explorer--results-table-highlight#highlight">
+      <option value="log">Log</option>
+      <option value="linear">Linear</option>
+    </select>
 
-    <option value="log">Log</option>
-    <option value="linear">Linear</option>
-  </select>
+    <label for="hi-scale">Scale</label>
+  </div>
 
-  <label for="hi-palette">Palette</label>
-  <select
-    id="hi-palette"
-    data-data-explorer--results-table-highlight-target="palette"
-    data-action="data-explorer--results-table-highlight#highlight">
+  <div class="form-floating input-group mb-3">
+    <select
+      id="hi-palette"
+      class="form-select"
+      data-data-explorer--results-table-highlight-target="palette"
+      data-action="data-explorer--results-table-highlight#highlight"
+      data-controller="slim-select"
+      data-ss-opt-allow-deselect="false"
+      data-ss-opt-placeholder-text="">
 
-    <option value="rainbow">Rainbow</option>
-    <option value="monochrome">Monochrome</option>
-  </select>
+      <option value="rainbow">Rainbow</option>
+      <option value="monochrome">Monochrome</option>
+    </select>
 
-  <label for="hi-divisions">Divisions</label>
-  <select
-    id="hi-divisions"
-    data-data-explorer--results-table-highlight-target="divisions"
-    data-action="data-explorer--results-table-highlight#highlight">
+    <label for="hi-palette">Palette</label>
+  </div>
 
-    <option value="">All values</option>
+  <div class="form-floating input-group">
+    <select
+      id="hi-divisions"
+      class="form-select"
+      data-data-explorer--results-table-highlight-target="divisions"
+      data-action="data-explorer--results-table-highlight#highlight"
+      data-controller="slim-select"
+      data-ss-opt-allow-deselect="false"
+      data-ss-opt-placeholder-text="">
 
-    <% if @composition.try(:metrics) && @composition.metrics.size > 1 %>
-      <option value="data-dx-metric">Per metric</option>
-    <% end %>
+      <option value="">All values</option>
 
-    <% if @composition.try(:groups)&.[](1) || (@composition.is_a?(Compositions::TimeSeriesComposition) && @composition.try(:groups)&.[](0)) %>
-      <option value="data-dx-metric,data-dx-group-1-member-descriptor">Amongst group 1</option>
-    <% end %>
-
-    <% if @composition.try(:groups)&.[](1) %>
-      <option value="data-dx-metric,data-dx-group-2-member-descriptor">Amongst group 2</option>
-    <% end %>
-
-    <% if @composition.is_a? Compositions::TimeSeriesComposition %>
-      <option value="data-dx-metric,data-dx-interval-descriptor">Amongst interval</option>
-
-      <% if @composition.comparisons&.size > 0 %>
-        <option value="data-dx-metric,data-dx-interval-descriptor,data-dx-comparison-rewind">Amongst interval and comparison</option>
+      <% if @composition.try(:metrics) && @composition.metrics.size > 1 %>
+        <option value="data-dx-metric">Per metric</option>
       <% end %>
 
-      <% if @composition.comparisons&.size == 0 %>
-        <% if @composition&.groups.size == 1 %>
-          <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor">Group 1 over time</option>
+      <% if @composition.try(:groups)&.[](1) || (@composition.is_a?(Compositions::TimeSeriesComposition) && @composition.try(:groups)&.[](0)) %>
+        <option value="data-dx-metric,data-dx-group-1-member-descriptor">Amongst group 1</option>
+      <% end %>
+
+      <% if @composition.try(:groups)&.[](1) %>
+        <option value="data-dx-metric,data-dx-group-2-member-descriptor">Amongst group 2</option>
+      <% end %>
+
+      <% if @composition.is_a? Compositions::TimeSeriesComposition %>
+        <option value="data-dx-metric,data-dx-interval-descriptor">Amongst interval</option>
+
+        <% if @composition.comparisons&.size > 0 %>
+          <option value="data-dx-metric,data-dx-interval-descriptor,data-dx-comparison-rewind">Amongst interval and comparison</option>
         <% end %>
 
-        <% if @composition&.groups.size == 2 %>
-          <option value="data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">Amongst group 1+2</option>
-          <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">Group 1+2 over time</option>
+        <% if @composition.comparisons&.size == 0 %>
+          <% if @composition&.groups.size == 1 %>
+            <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor">Group 1 over time</option>
+          <% end %>
+
+          <% if @composition&.groups.size == 2 %>
+            <option value="data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">Amongst group 1+2</option>
+            <option value="delta,data-dx-metric,data-dx-group-1-member-descriptor,data-dx-group-2-member-descriptor">Group 1+2 over time</option>
+          <% end %>
         <% end %>
       <% end %>
-    <% end %>
-  </select>
+    </select>
+
+    <label for="hi-divisions">Divisions</label>
+  </div>
 </fieldset>
